# project-verifier

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  skills-lock.json
backend/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  pyproject.toml
backend/app/: database.py  main.py  settings.py
backend/app/core/: rate_limit.py  security.py
backend/app/project_evaluations/: __init__.py  router.py  router_realtime.py  service.py
backend/app/project_evaluations/analysis/: __init__.py  context_builder.py  llm_client.py  prompts.py  quality_assessor.py  structural_extractor.py
backend/app/project_evaluations/domain/: __init__.py  artifact.py  bloom.py  common.py  enums.py  evaluation.py  interview.py  models.py  quality.py  question.py  report.py  session.py
backend/app/project_evaluations/ingestion/: __init__.py  file_classifier.py  text_extractors.py  zip_handler.py
backend/app/project_evaluations/interview/: __init__.py  evaluator.py  intent_classifier.py  question_generator.py  rubric.py  session_service.py  speech_service.py  turn_flow.py
backend/app/project_evaluations/persistence/: __init__.py  models.py  repository.py
backend/app/project_evaluations/prompts/: llm_prompts.md
backend/app/project_evaluations/rag/: chunk_models.py  context_pack.py  embedder.py  redaction.py  retriever.py  splitters.py
backend/data/: app.db
backend/tests/: conftest.py  test_evaluation_api.py  test_health.py  test_interview_transcription_api.py  test_rag_ingestion.py  test_settings.py  test_turn_interview_flow.py
(+139 files in other folders)
