[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for the project authenticity evaluation MVP"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "httpx>=0.28.1",
    "openai>=1.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pypdf>=6.4.0",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.20",
    "python-pptx>=1.0.2",
    "qdrant-client>=1.15.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
    "uvicorn[standard]>=0.38.0",
    "websockets>=12.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.14.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
exclude = [".venv"]
